Currying & partial applications added. Section 8 done

--- a/CollectionFunctions/CollectionFunctionsNa/CollectionFunctionsNa.fsproj
+++ b/CollectionFunctions/CollectionFunctionsNa/CollectionFunctionsNa.fsproj
@@ -9,11 +9,12 @@
     <ItemGroup>
         <Content Include=".dockerignore" />
         <Content Include="Dockerfile" />
-        <Content Include="StudentScores.txt">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <ProjectReference Include="..\CollectionFunctions.Common\CollectionFunctions.Common.fsproj" />
+        <Content Include="StudentScoresNA.txt" />
         <Compile Include="Program.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CollectionFunctions\CollectionFunctions.fsproj" />
     </ItemGroup>
 
 </Project>
