Section 9: Project Organization done

--- a/CollectionFunctions/CollectionFunctions.Common/CollectionFunctions.Common.fsproj
+++ b/CollectionFunctions/CollectionFunctions.Common/CollectionFunctions.Common.fsproj
@@ -6,8 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Float.fs" />
         <Compile Include="Student.fs" />
         <Compile Include="StudentV2.fs" />
+        <Compile Include="Summary.fs" />
         <Compile Include="Quote.fs" />
     </ItemGroup>
 
