--- a/CollectionFunctions/CollectionFunctions.Common/CollectionFunctions.Common.fsproj
+++ b/CollectionFunctions/CollectionFunctions.Common/CollectionFunctions.Common.fsproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="Optional.fs" />
         <Compile Include="Quote.fs" />
         <Compile Include="Float.fs" />
         <Compile Include="TestResult.fs" />
