--- a/CollectionFunctions/GenericPoints/GenericPoints.fsproj
+++ b/CollectionFunctions/GenericPoints/GenericPoints.fsproj
@@ -3,14 +3,16 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <WarnOn>3390;$(WarnOn)</WarnOn>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-        <Content Include=".dockerignore" />
-        <Content Include="Dockerfile" />
-        <ProjectReference Include="..\CollectionFunctions.Common\CollectionFunctions.Common.fsproj" />
-        <Compile Include="Program.fs" />
+      <Content Include=".dockerignore" />
+      <Content Include="Dockerfile" />
+      <Compile Include="Point.fs" />
+      <Compile Include="GenericPoint.fs" />
+      <Compile Include="Program.fs" />
     </ItemGroup>
 
 </Project>
