--- a/CollectionFunctions2/CollectionFunctions2.fsproj
+++ b/CollectionFunctions2/CollectionFunctions2.fsproj
@@ -3,15 +3,19 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <WarnOn>3390;$(WarnOn)</WarnOn>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Include="Bricks.fs" />
-      <Content Include=".dockerignore" />
-      <Content Include="Dockerfile" />
-      <Compile Include="Program.fs" />
+        <ProjectReference Include="..\CollectionFunctions.Common\CollectionFunctions.Common.fsproj" />
+        <Compile Include="Bricks.fs" />
+        <Content Include=".dockerignore" />
+        <Content Include="Dockerfile" />
+        <Compile Include="Students.fs" />
+        <Compile Include="Program.fs" />
+        <Content Include="StudentScores.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
